Fix a potential deadlock when transform tool requests config update

Config update via the notifier starts a lot of processes, like display
filter config change. That can potentially have a race condition with
a running transform tool. This patch just makes the tool to propagate
this update internally.

BUG:457715