plugins/tools/tool_transform2/kis_tool_transform.h
@@ -324,6 +324,7 @@ private Q_SLOTS:
     void slotResetTransform(ToolTransformArgs::TransformMode mode);
     void slotCancelTransform();
     void slotRestartTransform();
+    void slotRestartAndContinueTransform();
     void slotEditingFinished();
 
     void slotMoveDiscreteUp();
